[package]
name = "hesshub-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.1"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
fcm = "0.9.2"
warp = "0.3.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.177"
serde_json = "1.0.107"
futures-util = "0.3.30"
tokio-stream = "0.1.14"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
argon2 = "0.5.2"
jsonwebtoken = "8.3.0"
rand_core = "0.6.4"
regex = "1.10.4"
dotenv = "0.15.0"
lettre = { version = "0.11.4", features = ["tokio1", "tokio1-native-tls"] }
handlebars = "5.1.1"
